# aone_webrtc_sfu

./: LICENSE  README.md
client/android/aone_client_app/: build.gradle  settings.gradle
client/android/aone_client_app/app/: build.gradle
client/android/aone_client_app/app/src/main/: AndroidManifest.xml
client/android/aone_client_app/app/src/main/java/com/aone/sfuapp/: AppRTCAudioManager.java  AppRTCBluetoothManager.java  AppRTCProximitySensor.java  CallFragment.java  HudFragment.java  IntroActivity.java  RTCClientActivity.java  RTCCodecs.java  RTCCoreSDK.java  RTCFields.java  RTCPreference.java  RandomGeneratorImpl.java  UnhandledExceptionHandler.java
client/android/aone_client_app/app/src/main/res/drawable/: stat_text_bg.xml  video_view_border.xml
client/android/aone_client_app/app/src/main/res/layout/: activity_intro.xml  activity_rtc_client.xml  fragment_call.xml  fragment_hud.xml
client/android/aone_client_app/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
client/android/aone_client_app/app/src/main/res/values-night/: themes.xml
client/android/aone_client_app/app/src/main/res/xml/: network_security_config.xml
client/android/aone_client_app/gradle/wrapper/: gradle-wrapper.properties
client/android/aone_client_app/rtccore/: AndroidManifest.xml  build.gradle
client/android/aone_client_app/sdp/: build.gradle
client/android/aone_client_app/sdp/src/main/: AndroidManifest.xml
client/doc/protocol/: signaling_protocol.md
server/include/: RTCMediaServerController.h
server/tests/: CMakeLists.txt  RTCMediaServerTest.cc
(+293 files in other folders)
